cmake_minimum_required(VERSION 3.27)
project(untitled4 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled4 main.c
        bt1.c
        bt2.c
        bt3.c
        bt4.c
        bt5.c
        bt1.c
        bt2.c
        bt3.c
        bt4.c
        bt5.c
        bt6.c
        bt7.c
        bt9.c
        bt10.c
        bt11.c)
